[SC-5102] - changed 'Seats' to 'seats', removed '-' before the price, changed 'Per user / mo' to 'Per seat / mo', added showing of numbers in US format, fixed overlapping of 'Total seats', fixed subscript instead of superscript, reduced blank spaces, fixed undefined module in title

--- a/src/app/shared/common/payment-wizard/package-chooser/package-chooser.component.less
+++ b/src/app/shared/common/payment-wizard/package-chooser/package-chooser.component.less
@@ -9,7 +9,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: auto;
 
     .packageHeader {
@@ -135,6 +135,7 @@
                 font-style: normal;
                 &.hidden {
                     visibility: hidden;
+                    display: inline-flex !important;
                 }
             }
 
